update descriptive text for Q5 to demo changes
Great job! I have one suggestion - like professor said in class "don't make me think", you could demo your changes if you add descriptive text For example, to demonstrate that the text is 1.5rem, you could write "I'm 1.5rem"  instead of "test".  You could add similar demos to other questions as well.

--- a/assessment.html
+++ b/assessment.html
@@ -225,12 +225,12 @@
       Explain on each item on when would you use that unit by example -->
           <h2>Q5, Create an itemized list of units with inline styling:</h2>
           <div class="unit">
-            <li style="font-size: 1vw">Test: 1em, use it</li>
-            <li style="font-size: 10vi">Test: 1em, use it</li>
-            <li style="font-size: 1.5rem">Test: 1em, use it</li>
-            <li style="font-size: 2em">Test: 1em, use it</li>
-            <li style="font-size: 4ex">Test: 1em, use it</li>
-            <li style="font-size: 4ch">Test: 1em, use it</li>
+            <li style="font-size: 1vw">I'm 1vw</li>
+            <li style="font-size: 10vi">I'm 10vi</li>
+            <li style="font-size: 1.5rem">I'm 1.5rem</li>
+            <li style="font-size: 2em">I'm 2em</li>
+            <li style="font-size: 4ex">I'm 4ex</li>
+            <li style="font-size: 4ch">I'm 4ch</li>
           </div>
           <!--Add a creative part of the page that uses 4 different positioningLinks to an external site. options. Try to think and explain when would you use these options.-->
           <h2>Q6, Create an itemized list of units with inline styling:</h2>
